feat: add more example of the documentation
This revise the fib.h to be just a list of functions, and also add class example.

--- a/fib/Makefile
+++ b/fib/Makefile
@@ -23,15 +23,22 @@ build: main
 #
 # This target depends on main.o since it uses this
 # object file to create an executable.
-main: main.o
+main: main.o fib.o fib_cache.o
 # LDFLAGS is used because this command only link object file to an executable file.
 # $@ is referring to main (the name of the target).
 # $< refers to main.o (the first entry in the dependency list of this target).
-	$(CXX) $(LDFLAGS) -o $@ $<
+# $^ refers to the entire list of dependency.
+	$(CXX) $(LDFLAGS) -o $@ $^
 
 main.o: main.cc fib.h
 # $@ is referring to main (the name of the target).
 # $< refers to main.o (the first entry in the dependency list of this target).
+	$(CXX) $(CXXFLAGS) -o $@ $<
+
+fib.o: fib.cc fib.h
+	$(CXX) $(CXXFLAGS) -o $@ $<
+
+fib_cache.o: fib_cache.cc fib_cache.h
 	$(CXX) $(CXXFLAGS) -o $@ $<
 
 # This target is to create an archive file containing the source code.
@@ -47,3 +54,4 @@ clean:
 # '-' is used to ignore error if any occur.
 # '-rf' with rm is dangerous.
 	-rm -f main
+	-rm -f *.o
