fix: add a compilation for fib.o in Makefile for unit testing

--- a/fib/test/Makefile
+++ b/fib/test/Makefile
@@ -4,8 +4,11 @@ all: build runall
 
 build: test_fib
 
-test_fib: test_fib.o
+test_fib: test_fib.o fib.o
 	$(CXX) -o test_fib $^
+
+fib.o: ../fib.cc ../fib.h
+	$(CXX) $(CXXFLAGS) -c -o $@ $<
 
 test_fib.o: test_fib.cc ../fib.h
 	$(CXX) $(CXXFLAGS) -c -o $@ $<
