feat(unittest): remove hard coded browser name

--- a/unittesting.examples/js/package.json
+++ b/unittesting.examples/js/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "serve": "serve",
-    "test": "mocha"
+    "test": "mocha --fgrep 'Fib Module'",
+    "test-browser": "mocha --fgrep 'Web App'"
   },
   "repository": {
     "type": "git",
