--- a/unittesting.examples/cpp/src/CMakeLists.txt
+++ b/unittesting.examples/cpp/src/CMakeLists.txt
@@ -1,1 +1,4 @@
 add_executable(main main.cc)
+
+find_package(unofficial-curlpp CONFIG REQUIRED)
+target_link_libraries(main PRIVATE unofficial::curlpp::curlpp)
